fixing image resizing on mobile

--- a/assets/css/teammolde.css
+++ b/assets/css/teammolde.css
@@ -7140,6 +7140,11 @@ table.table-condensed tfoot td {
   width: 100%;
   background: #000;
 }
+@media (max-width: 992px) {
+  .panel-header .img-container {
+    height: auto;
+  }
+}
 .panel-header h3 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 22px;
