--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -647,6 +647,9 @@ table.table-condensed {
 			width: 100%;
 			background: #000;
 		}
+		@media (max-width: @screen-md-min) {
+			height: auto;
+		}
 	}
 	h3 {
 		font-family: 'Source Sans Pro', sans-serif;
